<?xml version="1.0"?>
<package>
  <name>gplanner</name>
  <version>0.0.0</version>
  <description>The gplanner package</description>

  <maintainer email="shivamgautam@gmail.com">shivam</maintainer>
  <license>TODO</license>


  <build_depend>message_generation</build_depend> 
  <run_depend>message_runtime</run_depend> 

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sbpl</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>rospack</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roslib</run_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>rospack</run_depend>
  
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>